feat: Diseño de vistas de kiosco de turnos e impresion de turnos

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,5 +6,6 @@
 
 @import 'layouts/login';
 @import 'layouts/kiosco';
+@import 'layouts/imprimir_turno';
 @import 'layouts/app';
 @import 'layouts/pages';
