feat: Diseño vista impresion de turnos

--- a/resources/sass/base/_variables.scss
+++ b/resources/sass/base/_variables.scss
@@ -27,6 +27,7 @@ $gris_g2 :#7a7b7f;
 $gris_g3 :#C6C5C7;
 $gris_g4 :#EAEAED;
 $gris_g5 :#f6f6f6;
+$gris_g6 : #565658;
 
 $negro :#000;
 $blanco :#fff;
