feat: Avance en diseño de las vistas faltantes (administrador ventanillas, ventanilla y pantalla de turnos)

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,6 @@
 @import 'layouts/imprimir_turno';
 @import 'layouts/app';
 @import 'layouts/pages';
+@import 'layouts/ventanilla';
+@import 'layouts/home';
+@import 'layouts/pantalla_turnos';
