--- a/resources/sass/layouts/_pages.scss
+++ b/resources/sass/layouts/_pages.scss
@@ -4,7 +4,7 @@
 }
 
 .custom-title-page {
-    color: #353535;
+    color: #5f5f5f;
     margin: 0;
     padding: .5rem 0;
     text-transform: uppercase;
