Catalogo de cajas guarda/elimina/edita

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,5 @@
 @import 'layouts/imprimir_turno';
 @import 'layouts/app';
 @import 'layouts/pages';
+@import 'layouts/cajas';
+@import 'layouts/datatables';
