feat: Nuevo background card imprimir turno

--- a/resources/sass/layouts/_imprimir_turno.scss
+++ b/resources/sass/layouts/_imprimir_turno.scss
@@ -58,6 +58,7 @@
     background-color: v.$morado_m2;
     background-image: url(../../public/img/background-nuevo-turno.png);
     background-size: cover;
+    background-position: center center;
     
     min-height: 20rem;
     border-bottom: .5rem solid v.$verde_v2;
