--- a/resources/sass/layouts/_imprimir_turno.scss
+++ b/resources/sass/layouts/_imprimir_turno.scss
@@ -3,7 +3,7 @@
 
 .imprimir-turno-body {
     background-image: url(../../public/img/imprimir-turno-background.png);
-    height: 100vh;
+    // height: 100vh;
     background-size: cover;
     // background-position: center center;
 }
