buscador en inicio y boton regresar

--- a/resources/sass/layouts/_home.scss
+++ b/resources/sass/layouts/_home.scss
@@ -6,6 +6,10 @@
     min-height: 47rem;
 }
 
+.boton-regresar{
+    font-size: 1.7rem;
+}
+
 .card-titulo-administrar-ventanillas {
     background-color: v.$morado_m2;
     width: 50%;
