--- a/resources/sass/layouts/_kiosco.scss
+++ b/resources/sass/layouts/_kiosco.scss
@@ -94,3 +94,23 @@
     height: 1.5rem;
     position: absolute;
 }
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid v.$blanco;
+    border-bottom-color: v.$morado_m2;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
