--- a/resources/sass/layouts/_ventanilla.scss
+++ b/resources/sass/layouts/_ventanilla.scss
@@ -121,3 +121,24 @@
     margin: auto;
 }
 
+.loader-ventanilla {
+    width: 38px;
+    height: 38px;
+    border: 5px solid v.$morado_m2;
+    border-bottom-color: v.$verde_v2;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+.loader-reportes {
+    width: 58px;
+    height: 58px;
+    border: 5px solid v.$morado_m2;
+    border-bottom-color: v.$verde_v2;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
