feat: Se agrega estilo a kioscos para que el icono loader se ajuste correctamente

--- a/resources/sass/layouts/_kiosco.scss
+++ b/resources/sass/layouts/_kiosco.scss
@@ -65,6 +65,10 @@
     align-items: flex-end;
 }
 
+.div-row-botones-generar-turno {
+    min-height: 11rem;
+}
+
 // Boton Generar Turno posible css
 .boton-generar-turno-1 {
     background-color: v.$morado_m2;
