Cambios en vista ventanilla, pantalla y home. algoritmo modificado para la atencion

--- a/resources/sass/layouts/_home.scss
+++ b/resources/sass/layouts/_home.scss
@@ -2,7 +2,7 @@
 @use '../base/mixins' as m;
 
 .home-main-card {
-    border: .1rem solid v.$gris_g3;
+    // border: .1rem solid v.$gris_g3;
     min-height: 53rem;
 }
 
