--- a/resources/sass/layouts/_imprimir_turno.scss
+++ b/resources/sass/layouts/_imprimir_turno.scss
@@ -78,15 +78,15 @@
     display: flex;
     justify-content: center;
     cursor: pointer;
-    width: 90%;
-    height: 3.9rem;
+    width: 100%;
+    height: 10rem;
     margin: auto;
 }
 
 .custom-card-action-icon {
     position: relative;
     height: 100%;
-    width: 20%;
+    width: 80%;
     background-color: v.$morado_m2;
 
     @include m.tablet {
@@ -100,15 +100,15 @@
 
 .custom-card-action-icon img {
     position: absolute;
-    height: 60%;
-    width: 60%;
+    height: 70%;
+    width: 70%;
     top: 20%;
     left: 20%;
 }
 
 .custom-card-button {
-    width: 80%;
-    height: 3.9rem!important;
+    width: 35rem;
+    height: 9.8rem!important;
     border-radius: 0;
     border-right: .5rem solid v.$morado_m2;
     font-weight: 600;
