--- a/resources/sass/layouts/_pantalla_turnos.scss
+++ b/resources/sass/layouts/_pantalla_turnos.scss
@@ -75,12 +75,12 @@
 }
 
 .card-pantalla-tabla-columna-turnos {
-    padding-top: 7%;
+    // padding-top: 7%;
     background-color: v.$blanco;
 }
 
 .card-pantalla-tabla-columna-ventanillas {
-    padding-top: 7%;
+    // padding-top: 7%;
     background-color: v.$morado_m2;
 }
 
@@ -88,10 +88,10 @@
     text-align: center;
     font-weight: 800;
     color: v.$gris_g6;
-    font-size: 3.5rem;
+    font-size: 5.8rem;
 
     border-bottom: .1rem solid v.$gris_g3;
-    width: 70%;
+    width: 100%;
     margin: auto;
     // padding-bottom: 1rem;
 }
@@ -100,10 +100,10 @@
     text-align: center;
     font-weight: 800;
     color: v.$blanco;
-    font-size: 3.5rem;
+    font-size: 5.8rem;
 
     border-bottom: .1rem solid v.$gris_g3;
-    width: 70%;
+    width: 40%;
     margin: auto;
     // padding-bottom: 1rem;
 }
