--- a/resources/sass/layouts/_pantalla_turnos.scss
+++ b/resources/sass/layouts/_pantalla_turnos.scss
@@ -53,24 +53,24 @@
 }
 
 .card-pantalla-tabla-titulo-turno p {
-    padding-top: .5rem;
+    // padding-top: .5rem;
     padding-bottom: .5rem;
     margin-bottom: 0;
     text-align: center;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 1.7rem;
+    font-size: 4rem;
     color: v.$blanco;
 }
 
 .card-pantalla-tabla-titulo-ventanilla p {
-    padding-top: .5rem;
+    // padding-top: .5rem;
     padding-bottom: .5rem;
     margin-bottom: 0;
     text-align: center;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 1.7rem;
+    font-size: 3rem;
     color: v.$gris_g6
 }
 
