cambios en el reporte y vistas de ventanilla

--- a/resources/sass/layouts/_ventanilla.scss
+++ b/resources/sass/layouts/_ventanilla.scss
@@ -23,6 +23,7 @@
     color: v.$blanco;
     font-weight: 700;
     padding-top: 1rem;
+    font-size: 6rem;
 
     @include m.tablet {
         margin-left: 10rem;
